--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 # MongoDB connection string
-MONGO_URI=mongodb://127.0.0.1:27017/Counseling
+MONGO_URI=MONGO_URI=mongodb+srv://ssk85240012:Santhosh%401@yourcluster.mongodb.net/Counsolor?retryWrites=true&w=majority
 ZOOM_API_KEY=your_zoom_api_key
 ZOOM_API_SECRET=your_zoom_api_secret
 PORT=5111
