--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 # MongoDB connection string
-MONGO_URI=MONGO_URI=mongodb+srv://ssk85240012:ssk85240012@cluster0.v8pex.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://ssk85240012:ssk85240012@cluster0.v8pex.mongodb.net/Counsolor?retryWrites=true&w=majority&appName=Cluster0
 ZOOM_API_KEY=your_zoom_api_key
 ZOOM_API_SECRET=your_zoom_api_secret
 PORT=5111
