--- a/Backend/.env
+++ b/Backend/.env
@@ -6,4 +6,4 @@ PORT=5111
 STRIPE_WEBHOOK_SECRET=your_webhook_secret
 STRIPE_SECRET_KEY=sk_test_4eC39HqLyjWDarjtT1zdp7dc
 JWT_SECRET=your_jwt_secret_key
-FRONTEND_URL=https://incandescent-gaufre-15c5a6.netlify.app
+FRONTEND_URL=https://stellar-khapse-fcde22.netlify.app
